--- a/gradle.properties
+++ b/gradle.properties
@@ -6,9 +6,9 @@ minecraft_version=1.19.3
 yarn_mappings=1.19.3+build.5
 loader_version=0.14.13
 # Mod Properties
-mod_version=1.0.1
+mod_version=1.0.2
 maven_group=org.lolicode
-archives_base_name=[fabric-1.19.3]AllMusic_Server
+archives_base_name=AllMusic_Server-fabric-1.19.3
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.73.2+1.19.3
