--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,10 @@ loader_version=0.14.13
 # Mod Properties
 mod_version=1.0.4
 maven_group=org.lolicode
-archives_base_name=AllMusic_Server-fabric-1.19
+archives_base_name=NekoMusic_Server-fabric-1.19
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.73.2+1.19.3
 carpet_branch=1.19.3
 carpet_core_version=1.4.96+v230201
+fabric_language_kotlin_version=1.9.1+kotlin.1.8.10
