--- a/gradle.properties
+++ b/gradle.properties
@@ -15,3 +15,4 @@ fabric_version=0.73.2+1.19.3
 carpet_branch=1.19.3
 carpet_core_version=1.4.96+v230201
 fabric_language_kotlin_version=1.9.1+kotlin.1.8.10
+badpackets_version=0.3.4
