--- a/gradle.properties
+++ b/gradle.properties
@@ -2,17 +2,17 @@
 org.gradle.jvmargs=-Xmx1G
 # Fabric Properties
 # check these on https://modmuss50.me/fabric.html
-minecraft_version=1.19.3
-yarn_mappings=1.19.3+build.5
-loader_version=0.14.13
+minecraft_version=1.20-pre5
+yarn_mappings=1.20-pre5+build.3
+loader_version=0.14.19
 # Mod Properties
 mod_version=1.1.0
 maven_group=org.lolicode
-archives_base_name=NekoMusic_Server-fabric-1.19
+archives_base_name=NekoMusic_Server-fabric-1.20
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
-fabric_version=0.73.2+1.19.3
-carpet_branch=1.19.3
-carpet_core_version=1.4.96+v230201
-fabric_language_kotlin_version=1.9.1+kotlin.1.8.10
-badpackets_version=0.3.4
+fabric_version=0.81.3+1.20
+carpet_branch=1.20-pre5
+carpet_core_version=1.4.110+v230523
+fabric_language_kotlin_version=1.9.4+kotlin.1.8.21
+badpackets_version=0.4.1
