--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.19.3
 yarn_mappings=1.19.3+build.5
 loader_version=0.14.13
 # Mod Properties
-mod_version=1.1.2
+mod_version=1.1.3
 maven_group=org.lolicode
 archives_base_name=NekoMusic_Server-fabric-1.19
 # Dependencies
@@ -16,3 +16,4 @@ carpet_branch=1.19.3
 carpet_core_version=1.4.96+v230201
 fabric_language_kotlin_version=1.9.1+kotlin.1.8.10
 badpackets_version=0.3.4
+fabric_permissions_api_version=0.2-SNAPSHOT
