--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ minecraft_version=1.20.1
 yarn_mappings=1.20.1+build.2
 loader_version=0.14.21
 # Mod Properties
-mod_version=1.1.2
+mod_version=1.1.3
 maven_group=org.lolicode
 archives_base_name=NekoMusic_Server-fabric-1.20
 # Dependencies
@@ -16,3 +16,4 @@ carpet_branch=1.20
 carpet_core_version=1.4.112+v230608
 fabric_language_kotlin_version=1.9.4+kotlin.1.8.21
 badpackets_version=0.4.1
+fabric_permissions_api_version=0.2-SNAPSHOT
